feat(*): multiple configuration template for Multipass-based Jenkins agents